--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 90vh;
+    min-height: 87dvh;
     padding: 1rem;
     color: white;
     background-color: #1A1A1A;
