--- a/static/styles/view_post.css
+++ b/static/styles/view_post.css
@@ -70,7 +70,11 @@
   align-items: center;
   margin: 3em 0;
 }
-
+#commentsection{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; 
+}
 .submit_comment {
   color: #b5734c;
   font-weight: bold;
@@ -79,9 +83,7 @@
   background-color: #363636;
   justify-items: flex-start;
   border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end; 
+
 }
 #commentsection {
   width: 100%;
@@ -91,18 +93,24 @@
   background-color: #252525;
   color: white;
   min-height: 15dvh;
+  resize: vertical;
 }
-
+.commentBtnSec{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-end;
+}
 .commentBtn {
-  justify-content: center;
   background-color: #b5734c;
-  width: 25%;
   padding: 0.5em;
   font-size: 1.3em;
   color: white;
   border-radius: 0.5em;
   cursor: pointer;
   margin-top: 0.5em;
+  width: 35%;
+
 }
 
 .comment_item {
@@ -183,9 +191,7 @@
     gap: 0.5em;
   }
 
-  .commentBtn {
-    width: 40%;
-  }
+
 
   .comment-header {
     font-size: 1.2rem;
