--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -32,7 +32,7 @@ body {
     font-weight: bold;
 
 }
-.login_container input,.login_container select, .login_container button{
+.login_container input,.login_container select, .login_container button,select{
     width: 100%;
     padding: 0.5rem;
     border: 1px solid #B5734C;
