--- a/static/styles/chat.css
+++ b/static/styles/chat.css
@@ -1,66 +1,120 @@
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family: sans-serif;
-}
+
 
 .container {
   display: flex;
   height: 100%;
+  flex-direction: row-reverse;
+  padding: 1em;
   width: 100%;
 }
 
-.column {
-  flex: 1;
-  padding: 20px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
+.user_lists {
+  background-color: #363636;
+  margin-right: 1em;
+  width: 40%;
+  border-radius: 1em;
+  padding: 1em;
 }
 
-.nested-row {
-  padding: 10px;
-  border: 1px solid #ccc;
-  margin-bottom: 10px;
-}
-
-.nested-row:last-child {
-  margin-bottom: 0;
-}
-
-.send-container {
-  background-color: lightblue;
-  padding: 20px;
-  border: 1px solid blue;
+.chats {
+  display: flex;
+  justify-items: center;
+  width: 100%;
 }
 
 #message-container {
-  width: 80%;
+  width: 100%;
   max-width: 1200px;
-  display: flex; /* Added flexbox */
-  flex-direction: column; /* Stack messages and input vertically */
-  justify-content: flex-end; /* Align input to the bottom */
-  height: 100%; /* make the message container take up the full height of its parent*/
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto; 
+  border: 1px solid #ccc;
+  border-radius: 1em;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: #1A1A1A;
 }
 
-#message-container div {
-  background-color: #333; /* Dark gray background */
-  color: #EEE; /* Light gray text for contrast */
-  padding: 5px;
-  border-bottom: 1px solid #444; /* Subtle divider between messages */
+#messages {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 8px;
 }
 
-#message-container div:nth-child(2n) {
-  background-color: #444; /* Slightly lighter dark gray for alternating rows */
+
+.message {
+  font-size: clamp(14px, 1.2vw, 18px); 
+  padding: 0.3em 0.6em; 
+  border-radius: 8px;
+  max-width: 70%;
+  width: fit-content;
+  word-wrap: break-word;
 }
+
+.message.self {
+  background-color: #075e54; 
+  color: white;
+  align-self: flex-end;
+}
+
+.message.other {
+  background-color: #0b0a0a;
+  color: white;
+  align-self: flex-start;
+}
+
+.message .sender {
+  font-weight: bold;
+}
+
+.message.self .sender {
+  color: #ffbb86; 
+}
+
+.message.other .sender {
+  color: #ffbb86; 
+}
+
+.timestamp {
+  color: #b0b0b0; 
+  font-size: 0.75em;
+  margin-top: 4px;
+  text-align: right;
+}
+
+.message-content {
+  font-size: 1.6vw;
+  margin-left: 1em;
+  margin-top: 6px;
+}
+
 
 #send-container {
   padding: 10px 0;
-  background-color: white;
   max-width: 1200px;
-  width: 100%; /*changed to 100%*/
+  width: 100%;
   display: flex;
 }
 
-#message-input {
-  flex-grow: 1;
+#message-input,
+#send_message {
+  width: 70%;
+  padding: 0.5rem;
+  border: 1px solid #B5734C;
+  background-color: #1A1A1A;
+  color: white;
+  border-radius: 4px;
+  font-size: 1.5vh;
+  margin-right: 1em;
+}
+
+#send_message {
+
+  width: 30%;
+}
+
+#send_message:hover {
+  background-color: #B5734C;
 }
